# teeworlds

./: .Rhistory  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README  README_MAC_OSX_USER  announcement.txt  appveyor.yml  autoexec.cfg  bam-nosql.lua  bam.lua  build server.bat  buildlog.txt  circle.yml  clean.bash  configure.lua  default.bam  generate_makefile.bash  kerning.txt  license.txt  log.txt  readme.md  readme.txt  releasing.md  snapcraft.yaml  storage.cfg  teewars.qproj  tracking.txt
.circleci/: config.yml
.github/workflows/: build-nightly.yml  build.yaml  build.yml  clang-tidy.yml  linux.yml  macos.yml  style.yml  unix.yml  windows.yml
backup/: DDRace.pdn
client-pack/audio/: sfx_msg-mark.wv
client-pack/languages/: belarusian.txt  czech.txt  dutch.txt  index.txt  italian.txt
cmake/: Download_GTest_CMakeLists.txt.in  FindCrypto.cmake  FindFreetype.cmake  FindPnglite.cmake  FindSDL.cmake  FindSDL2.cmake  FindWavpack.cmake  FindZLIB.cmake
cmake/toolchains/: darwin.toolchain  mingw32.toolchain  mingw64.toolchain
contrib/example_configs/: server_ctf.cfg  server_dm.cfg  server_tdm.cfg
data/: char_teefault.tga  debug_font.tga  game_main.tga  gui_bg.tga  gui_logo.tga  gui_tee.tga  sun.tga  tileset_particles.tga  tileset_weapons_21052007.psd
data/audio/: Music_Menu.wv  foley_body_impact-02.wv  foley_body_impact-03.wv  foley_body_splat-01.wv  foley_body_splat-02.wv  foley_foot_left-04.wv  foley_foot_right-02.wv  foley_foot_right-04.wv  foley_land-04.wv  hook_attach-01.wv  hook_attach-02.wv  hook_attach-03.wv  hook_noattach-02.wv  music_menu.wv  sfx_ctf_cap_pl.wv  sfx_ctf_drop.wv  sfx_ctf_grab_en.wv  sfx_ctf_grab_pl.wv  sfx_ctf_rtn.wv  sfx_desc.txt  sfx_hit_strong-01.wv  sfx_hit_weak-02.wv  sfx_msg-client.wv  sfx_msg-server.wv  sfx_pickup_arm-03.wv  sfx_pickup_gun.wv  sfx_pickup_launcher.wv  sfx_pickup_ninja.wv  sfx_skid-03.wv  sfx_skid-04.wv  sfx_spawn_wpn-01.wv  sfx_spawn_wpn-02.wv  vo_teefault_cry-01.wv  vo_teefault_ninja-02.wv  vo_teefault_ninja-03.wv  vo_teefault_pain_short-01.wv  vo_teefault_pain_short-02.wv  vo_teefault_pain_short-05.wv  vo_teefault_pain_short-07.wv  vo_teefault_pain_short-08.wv  (+27 more)
data/bgmaps/: menu_heaven.map
data/countryflags/: index.txt
data/editor/: desert_main.rules  grass_main.rules  jungle_main.rules  winter_main.rules
data/fonts/: VERSION  alte_haas_grotesk12.tfnt  alte_haas_grotesk14.fnt  alte_haas_grotesk16.tfnt  alte_haas_grotesk24.tfnt  alte_haas_grotesk36.tfnt  alte_haas_grotesk6.fnt  alte_haas_grotesk_bold10.fnt  alte_haas_grotesk_bold12.tfnt  alte_haas_grotesk_bold14.fnt  alte_haas_grotesk_bold16.fnt  alte_haas_grotesk_bold16.tfnt  alte_haas_grotesk_bold24.tfnt  alte_haas_grotesk_bold36.fnt  alte_haas_grotesk_bold36.tfnt  alte_haas_grotesk_bold6.fnt  alte_haas_grotesk_bold6.tfnt  alte_haas_grotesk_bold8.fnt  borisblackbloxx10.fnt  borisblackbloxx10.tfnt  borisblackbloxx14.tfnt  borisblackbloxx24.tfnt  borisblackbloxx6.fnt  borisblackbloxx8.tfnt  default_font12.fnt  default_font14.fnt  default_font14.tfnt  default_font15.tfnt  default_font18.tfnt  default_font19.tfnt  default_font20.tfnt  default_font36.tfnt  default_font9.fnt  komikax72.tfnt  tahoma10.tfnt  tahoma14.tfnt  tahoma16.fnt  tahoma16.tfnt  tahoma20.fnt  tahoma20.tfnt  (+1 more)
data/gui/: button_highlighted.tga  button_not_highlighted.tga  connecting.tga  game_list_connect_localhost.tga  game_list_down_arrow.tga  game_list_item_active.tga  game_list_item_empty.tga  game_list_item_not_empty.tga  game_list_item_selected.tga  game_list_join_button.tga  game_list_quit_button.tga  game_list_scroll_circle.tga  game_list_teewars_banner.tga  game_list_up_arrow.tga  gui_widgets.tga  input_box.tga  join_button.tga  join_button_active.tga  join_button_hot.tga  (+22 more)
datasrc/: _compatibility.py  client.dts  compile.py  content.py  datatypes.py  network.dts  network.py  server.dts  teewars.ds  teewars.dsd
docs/: teewars.txt
fonts/: DefaultFont_10px_32bit_outline.fnt  DefaultFont_10px_32bit_outline.tfnt  DefaultFont_11px_32bit_outline.fnt  DefaultFont_11px_32bit_outline.tfnt  DefaultFont_12px_32bit_outline.fnt  DefaultFont_12px_32bit_outline.tfnt  DefaultFont_13px_32bit_outline.fnt  DefaultFont_13px_32bit_outline.tfnt  DefaultFont_14px_32bit_outline.fnt  DefaultFont_14px_32bit_outline.tfnt  DefaultFont_16px_32bit_outline.fnt  DefaultFont_16px_32bit_outline.tfnt  DefaultFont_36px_32bit_outline.fnt  DefaultFont_36px_32bit_outline.tfnt  alte_haas_grotesk10.fnt  alte_haas_grotesk10.tfnt  alte_haas_grotesk12.fnt  alte_haas_grotesk14.tfnt  alte_haas_grotesk16.fnt  alte_haas_grotesk20.fnt  alte_haas_grotesk20.tfnt  alte_haas_grotesk24.fnt  alte_haas_grotesk36.fnt  alte_haas_grotesk6.tfnt  alte_haas_grotesk8.fnt  alte_haas_grotesk8.tfnt  alte_haas_grotesk_bold10.tfnt  alte_haas_grotesk_bold12.fnt  alte_haas_grotesk_bold14.tfnt  alte_haas_grotesk_bold20.fnt  alte_haas_grotesk_bold20.tfnt  alte_haas_grotesk_bold24.fnt  alte_haas_grotesk_bold8.tfnt  borisblackbloxx12.fnt  borisblackbloxx12.tfnt  borisblackbloxx14.fnt  borisblackbloxx16.fnt  borisblackbloxx16.tfnt  borisblackbloxx20.fnt  borisblackbloxx20.tfnt  (+42 more)
masterserver/: default.bam
other/: config_directory.bat  teeworlds-server@.service  teeworlds.appdata.xml  tileset_map.tga  zillywoods.appdata.xml  zillywoods.desktop
scripts/: _compatibility.py  bash_completion.sh  build.py  check_header_guards.py  check_identifiers.py  cleanup.py  cmd5.py  compiler.py  configuration.txt  convert_l10n.py  copyright.py  count_source.sh  darwin_change_dylib.py  dat2c.py  deploy_win.py  dmg.py  download.py  extract_identifiers.py  font_converter.py  font_installer.sh  gen_keys.py  git_revision.py  installer.nsi  linecount.sh  make_config.py  make_docs.sh  make_release.py  make_src.py  mass_server.py  netobj.py  nicks.txt  normalize_po.py  png.py  process_blame.py  reconvert_l10n.py  refactor_count.py  strip_gfx.py  tw_api.py  twlib.py  update_localization.py  (+2 more)
src/: client.cpp  config.lua  datafile.cpp  gfx.cpp  interface.h  lzw.cpp  lzw.h  main.cpp  map.cpp  menu.cpp  packet.h  server.cpp  snd.cpp  ui.cpp  ui.h  versions.h
(+1772 files in other folders)
